--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,13 +12,13 @@
             </ul>
         </div>
         <div class="footer-col pure-u-1 pure-u-md-1-4">
-            <h3>Projects</h3>
+            <h3>Updates</h3>
             <ul>
             {% for project in site.projects limit:5 %}
                 <li><a href="{{ project.url | absolute_url }}">{{ project.title }}</a></li>
             {% endfor %}
             {% if site.projects | size > 5 %}
-                <li><a href="{{ "/projects/" | absolute_url }}">See all projects</a></li>
+                <li><a href="{{ "/projects/" | absolute_url }}">See all posts</a></li>
             {% endif %}
             </ul>
         </div>
